<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.6">
  <POU Name="FB_ESS" Id="{b21c7e9b-c8f6-487c-b890-5f427e3c3166}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK FB_ESS EXTENDS FB_ESS_Base
//////////////////
// AMSv1 standard product  
//////////////////
VAR CONSTANT
	// Characteristics of the object (Same for all instances)
	
END_VAR

VAR_INPUT PERSISTENT
	// Parameters of the Object (instance specific) 
	ParamTimeBetweenPcsConnect		: TIME := T#2S;	// (s) Tempo between sending order to second Pcs
	
	ParamPSoCEqualize				: REAL := 50;	// (kW) Additionnal power to equilibrate SoC internally of ESS . 

	ParamDeviationWarning			: REAL := 30.0;		// (%) Pourcentage of deviation between Battery temperature sensor before a warning is raised

	ParamTransfoWarningProdLimit		: REAL := 0.4 ; // (p.u) Limit production if Transfo warning. 
	ParamDelayOpenDCBbms			: TIME := T#3S;	// (s) Delay after inverters opened their DC contactor, to open the battery DC contactor
	
	ParamPmax						: REAL := 2500   ; // (kW) MAximum Power value for the whole ESS ( limited by transformer and protection ) 


	
	// HVAC //
	//ParamHygroStartHvac2		: REAL := 50.0;
	//ParamTempStartHvac2			: REAL := 24.0;
	//ParamTempStopHvac2			: REAL := 23.0;
	//ParamHygroStopHvac2			: REAL := 30.0;
	//ParamPriorityHvac			: ARRAY[1..CstNbHvac_ESS] OF UINT :=[1,2];
	//ParamTimeHvacChangePriority		: TIME := T#100H;	
	ParamTemperatureSetpoint		: REAL := 22.0;	// HVAC initial setpoint temperature . 
	ParamUPSDischargeMaxTime		: TIME := T#30M ; // Disconnect BESS if UPS is being discharged for too long. 	

	//ParamTimeBatDoorOpened			: TIME := T#15S;
	//ParamTimePcsDoorOpened			: TIME := T#15S;
	//ParamMaxTimeBuzzer				: TIME := T#5M;
	//ParamTimeUpsAlarm				: TIME := T#5M;
	
END_VAR


VAR_INPUT
	//Child objects
	AX_PCS 							: ARRAY[1..CstNbPcs_ESS] OF FB_PCS_Jema;
	AX_Bat							: ARRAY[1..CstNbBank_Ess] OF FB_SystemBMS_M3;
	AX_HVAC							: ARRAY[1..CstNbHvac_ESS] OF FB_HVAC_MADI;
	AX_TempSensor					: ARRAY[1..4] OF FB_ANA_IO;
	AX_HygroSensor					: ARRAY[1..4] OF FB_ANA_IO;
	A1_Spd							: FB_TOR_Spd;
	A1_DS_Bat						: FB_TOR_DS;
	A1_Ds_Pcs						: FB_TOR_DS;
	A1_ToS							: FB_TOR_TOS;
	A1_EM							: FB_EM_Pulse;
	A1_Cb_Q31						: FB_CB_Base;
	A1_ES							: FB_TOR_Es;
	A1_SD_Pcs						: FB_TOR_Sd;
	A1_Transfo						: FB_Transfo_MV;
	A1_UPS							: FB_UPS_ENERIS ; 
	A1_FSS							: FB_FSS ; 
	AX_CB_ChainDcSwitchBank			: ARRAY[1..CstNbBank_Ess] OF  FB_TOR_Base ; 
	AX_CB_ChainFanBank				: ARRAY[1..CstNbBank_Ess] OF  FB_TOR_Base ; 	
	A1_CB_RackCtrl24V				: FB_TOR_Base; 	// Etat des alimentations 24 V pour les controleur de racks ( secourus )
	A1_CB_PLC24V					: FB_TOR_Base ; // etat de l'alimentation 24 V pour les équipements PLC + relais sécruité secourus .

	IN_MesCouplerState_IO		: UINT ; 				// Coupler State IO
	
	IN_CmdStandby						: BOOL;


END_VAR



	//M_EVALUATE VARIABLES//        
    	



END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[]]></ST>
    </Implementation>
    <Method Name="M_EquipmentCalls" Id="{6f40907f-9a26-4bc5-aa62-1de09f2e2026}">
      <Declaration><![CDATA[METHOD M_EquipmentCalls
//////////////////
// Evaluate AMS characteristics
//////////////////

VAR
	// Method local variables (reinitialized at each cycle) 


	KK: UINT;
	
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[FOR KK := 1 TO CstNbHvac_ESS DO
	AX_HVAC[KK].M_Execute();
END_FOR

FOR KK := 1 TO CstNbBank_Ess DO 
	AX_Bat[KK].M_Execute();
END_FOR


FOR KK := 1 TO CstNbPcs_Ess DO 
	AX_PCS[KK].M_Execute();
END_FOR	


A1_DS_Bat.M_Execute();					
A1_Ds_Pcs.M_Execute();		
			
A1_ToS.M_Execute();				
	

A1_EM.M_Execute();	

A1_Spd.M_Execute();				

A1_Cb_Q31.M_Execute();	
				
//A1_Sd_Bat.M_Execute();					
A1_SD_Pcs.M_Execute();	

A1_ES.M_Execute();		
				
A1_Transfo.M_Execute();		

FOR KK := 1 TO 4 DO 
	AX_TempSensor[KK].M_Execute();
	AX_HygroSensor[KK].M_Execute();
END_FOR
		
A1_UPS.M_Execute() ; 			

A1_FSS.M_Execute();

FOR KK:= 1 TO ParamNbPcs DO 
	AX_CB_ChainDcSwitchBank[KK].M_Execute();		
	AX_CB_ChainFanBank[KK].M_Execute() ; 
END_FOR 
			
A1_CB_RackCtrl24V.M_Execute(); 			
A1_CB_PLC24V.M_Execute() ; 				]]></ST>
      </Implementation>
    </Method>
    <Method Name="M_Evaluate" Id="{bf33eae9-12f3-41e6-830a-3feb52149249}">
      <Declaration><![CDATA[METHOD M_Evaluate
//////////////////
// Evaluate ESSS characteristics : First retrieve the SystemBMS values then update the PCS parameters
//////////////////

VAR
	// Method local variables (reinitialized at each cycle) 



	KK: INT;
	CalConnected_PCS2: BYTE;
	CalConnected_PCS1: BYTE;
	

	

	CBChoose: BOOL;

END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[]]></ST>
      </Implementation>
    </Method>
    <Method Name="M_Init" Id="{ab96cb1d-b1af-49ae-8906-cb06d779f546}">
      <Declaration><![CDATA[METHOD M_Init

VAR
	MesIPAdressCTRLPcs: STRING;
	MesIPAdressCTRLBat: STRING;
	KK: UINT;
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[FOR KK := 1 TO CstNbHvac_ESS DO
	AX_HVAC[KK].IN_SetptTemp := ParamTemperatureSetpoint;		
	AX_HVAC[KK].ParamTempoComAlarm	:= T#10S ; 
	AX_HVAC[KK].ParamIpAddress		:= CONCAT(STR1:= '192.168.1.' , STR2 := INT_TO_STRING(150+2*(ParamEssNum-1)+(KK-1) ))  ; //CONCAT(STR1:= '192.168.1.' , STR2 := INT_TO_STRING(10*(ParamEssNum-1)+140+KK-1) )  ; 	
	AX_HVAC[KK].ParamUnitID			:= 1 ; 	
	AX_HVAC[KK].ParamTcpPort		:= 502 ; 
	AX_HVAC[KK].ParamClockWriteTime	:= T#2S ; 
	AX_HVAC[KK].ParamClockReadTime	:= T#1S ; 
	AX_HVAC[KK].ParamTimeOut		:= T#3S ;
	AX_HVAC[KK].ParamPriority 		:= KK;
	
END_FOR


FOR KK := 1 TO CstNbBank_Ess DO 
	AX_Bat[KK].ParamSystemBmsNum 	:= KK ; 
	AX_Bat[KK].ParamClockReadTime 	:= T#1S ; 
	AX_Bat[KK].ParamClockWriteTime := T#1S ;
	AX_Bat[KK].ParamEnomRack		:= 97.2; 	// kWh .  
	AX_Bat[KK].ParamEssNum 		:= ParamEssNum ; 
	AX_Bat[KK].ParamIpAddress 		:=CONCAT(STR1:= '192.168.1.' , STR2 := INT_TO_STRING(130+2*(ParamEssNum-1)+(KK-1) ))  ; 	  
	AX_Bat[KK].ParamNbRacks 		:= UINT_TO_BYTE(ParamNbRacks[KK]) ; 
	AX_Bat[KK].ParamReadAlarmTime 	:= T#90S ; 
	AX_Bat[KK].ParamReadWarningTime := T#30S  ; 
	AX_Bat[KK].ParamTcpPort	 	:= SEL(GVL_CFG.CstPLCBackup ,602 ,  502) ; 
	AX_Bat[KK].ParamTempoComAlarm 	:= T#10S ; 
	AX_Bat[KK].ParamTimeout 		:= T#5S ; 
	AX_Bat[KK].ParamTimeOutStart 	:= T#60S ; 
	AX_Bat[KK].ParamTimeOutStop 	:= T#5S ; 
	AX_Bat[KK].ParamTimeWatchdog 	:= T#30S ; 
	AX_Bat[KK].ParamUnitID 		:= 1 ;
	AX_Bat[KK].ParamNbRackString	:= 1 ; 
	AX_Bat[KK].ParamNbReadAtOnce	:= 10 ; 
	

END_FOR


FOR KK := 1 TO CstNbPcs_Ess DO 
	AX_PCS[KK].ParamClockReadTime 					:= T#200MS ; 
	AX_PCS[KK].ParamClockWriteTime 					:= T#500MS ; 
	AX_PCS[KK].ParamIPAddress 						:= CONCAT(STR1:= '192.168.1.' , STR2 := INT_TO_STRING(64+10*(ParamEssNum-1)+5*(KK-1)) )  ; 	
	AX_PCS[KK].ParamIPAddress_DSP[1]					:= CONCAT(STR1:= '192.168.1.' , STR2 := INT_TO_STRING(61+10*(ParamEssNum-1)+5*(KK-1)) )  ;
	AX_PCS[KK].ParamIPAddress_DSP[2]					:= CONCAT(STR1:= '192.168.1.' , STR2 := INT_TO_STRING(62+10*(ParamEssNum-1)+5*(KK-1)) )  ;
	AX_PCS[KK].ParamIPAddress_DSP[3]					:= CONCAT(STR1:= '192.168.1.' , STR2 := INT_TO_STRING(63+10*(ParamEssNum-1)+5*(KK-1)) )  ;
		
//	AX_PCS[KK].ParamFreqRegSoCmin					:= 3;
//	AX_PCS[KK].ParamFreqRegSoCmax					:= 98;
//	AX_PCS[KK].ParamTimeEnterStblPriorRmp			:=  T#5S;
//	AX_PCS[KK].ParamTimeFreqRegStbDuration			:= T#5S;
//	AX_PCS[KK].ParamTimeSoCRangeReachedRmp			:= T#5S;
	AX_PCS[KK].ParamTimeout							:= T#4S;
	AX_PCS[KK].ParamPoverQ							:= TRUE;
	AX_PCS[KK].ParamPcsNum 							:= KK;
	AX_PCS[KK].ParamAntiIslanding_Enabled 			:= TRUE ; 
	AX_PCS[KK].ParamEssNum 							:= ParamEssNum ; 
	AX_PCS[KK].IN_CmdPcsInLocalMode 					:= FALSE  ; 
	AX_PCS[KK].ParamPn							:= SEL(ParamEssNum = 6 , 1250 ,1040 ) ; // deja donné par les PCS en modbus 
	AX_PCS[KK].ParamPrange							:= SEL(ParamEssNum = 6 , 1559 ,1040 ) ; //  	
	AX_PCS[KK].ParamQn							:= SEL(ParamEssNum = 6 , 1250 ,1040 ) ; // deja donné par les PCS en modbus 	
	AX_PCS[KK].ParamNbPcs							:= SEL(ParamEssNum = 6 , 3 ,2 ) ;
	AX_PCS[KK].ParamTcpPort 						:= 502; 
	AX_PCS[KK].ParamTempoComAlarm 					:= T#10S ; 
	AX_PCS[KK].ParamTempoComWarning 				:= T#5S ; 
	AX_PCS[KK].ParamTimeout 						:= T#5S ; 
	AX_PCS[KK].ParamUnitID 							:= 1 ;
	AX_PCS[KK].IN_CmdP_On 							:= TRUE;
	AX_PCS[KK].ParamDeactivateWatchdog				:= FALSE ; 
	

	
END_FOR	


A1_DS_Bat.ParamNbSensors 			:= 1;
A1_DS_Bat.ParamAtleastOne			:= TRUE ; 
A1_DS_Bat.ParamCableCutSecurity 	:= FALSE  ; 
A1_DS_Bat.ParamTempoDoorAlarm 		:= T#15S ; 

A1_Ds_Pcs.ParamNbSensors 			:= 1;
A1_Ds_Pcs.ParamAtleastOne			:= TRUE ; 
A1_Ds_Pcs.ParamCableCutSecurity 	:= FALSE  ; 
A1_Ds_Pcs.ParamTempoDoorAlarm 		:= T#15S ; 
			
A1_ToS.ParamNbSensors 				:= 1;
A1_ToS.ParamAtleastOne				:= TRUE ; 
A1_ToS.ParamCableCutSecurity 		:= TRUE ; 
A1_ToS.ParamTempoToSAlarm 			:= T#3H ; 
A1_ToS.ParamTempoToSWarning			:= T#2H ; 		
	

A1_EM.ParamStepEactCons 		:= 10 	;
A1_EM.ParamStepEactProd 		:= 10 ; 
A1_EM.ParamStepEreactCons 	:= 10 ; 
A1_EM.ParamStepEreactProd 	:= 10 ;
A1_EM.ParamEssNum				:= ParamEssNum ; 

A1_Spd.ParamNbSensors 				:= 1;
A1_Spd.ParamAtleastOne 				:= TRUE ; 
A1_Spd.ParamCableCutSecurity 		:= FALSE ; 
A1_Spd.ParamTempoEs					:= T#5S ; 		

A1_Cb_Q31.ParamClosedInput_Connected:= TRUE;
A1_Cb_Q31.ParamNbFdbck	 			:= 1;
A1_Cb_Q31.ParamNC 					:= FALSE ; 
A1_Cb_Q31.ParamTimeOut_Alarm 		:= T#200MS ; 
A1_Cb_Q31.ParamTimeOut_Close 		:=  T#1S   ;	
A1_Cb_Q31.ParamTimeOut_Open 			:= T#1S ; 		


A1_SD_Pcs.ParamNbSensors 			:= 2;
A1_SD_Pcs.ParamAtleastOne 			:= FALSE ; 
A1_SD_Pcs.ParamCableCutSecurity 	:= FALSE ; 
A1_SD_Pcs.ParamTempoFire 			:= T#2S ; 

A1_ES.ParamNbSensors 				:= 1;
A1_ES.ParamCableCutSecurity 		:= FALSE;
A1_ES.ParamAtleastOne 				:= TRUE ; 
A1_ES.ParamTempoEs 					:= T#2S;

				
A1_Transfo.ParamPressureReliefPresent 	:= FALSE ; 	

FOR KK := 1 TO 4 DO 
	AX_TempSensor[KK].ParamRangeMax 	:= 50.0;
	AX_TempSensor[KK].ParamRangeMin 	:= 0.0;
	AX_TempSensor[KK].ParamDiffMax 		:= 2 ; 
	AX_TempSensor[KK].ParamFix 			:= 0 ;
	AX_TempSensor[KK].ParamForced_4_20 	:= FALSE  ; 
	AX_TempSensor[KK].ParamNbSensors 	:=  1 ; 
	AX_TempSensor[KK].ParamPT100 		:= FALSE ; 
	AX_TempSensor[KK].ParamVarMaxAlarm 	:= 32 ; 
	AX_TempSensor[KK].ParamVarMaxWarning:= 28 ;
	AX_TempSensor[KK].ParamVarMinAlarm 	:= 17 ; 
	AX_TempSensor[KK].ParamVarMinWarning:= 21 ;  
	
	AX_HygroSensor[KK].ParamRangeMax 		:= 100.0;
	AX_HygroSensor[KK].ParamRangeMin 		:= 0.0;
	AX_HygroSensor[KK].ParamDiffMax 		:= 2 ; 
	AX_HygroSensor[KK].ParamFix 			:= 0 ;
	AX_HygroSensor[KK].ParamForced_4_20 	:= FALSE  ; 
	AX_HygroSensor[KK].ParamNbSensors 		:=  1 ; 
	AX_HygroSensor[KK].ParamPT100 			:= FALSE ; 
	AX_HygroSensor[KK].ParamVarMaxAlarm 	:= 102 ; 
	AX_HygroSensor[KK].ParamVarMaxWarning 	:= 95 ;
	AX_HygroSensor[KK].ParamVarMinAlarm 	:= -10 ; 
	AX_HygroSensor[KK].ParamVarMinWarning 	:= -10 ; 
	
	
END_FOR


	AX_TempSensor[1].ParamName :=  'PCS Temp Sensor ' ; 
	AX_TempSensor[2].ParamName :=  'BAT 1 Temp Sensor ' ; 
	AX_TempSensor[3].ParamName :=  'BAT 2 Temp Sensor ' ; 
	AX_TempSensor[4].ParamName :=  'BAT 3 Temp Sensor ' ; 	
	
	AX_TempSensor[1].ParamVarMaxAlarm 		:= 50 ; 
	AX_TempSensor[1].ParamVarMaxWarning 	:= 45 ;
	AX_TempSensor[1].ParamVarMinAlarm 		:= 5 ; 
	AX_TempSensor[1].ParamVarMinWarning 	:= 10 ;  


A1_UPS.ParamClockReadTime 	:= T#1S ; 
A1_UPS.ParamNC 				:= FALSE ; 
A1_UPS.ParamTempoComAlarm 	:= T#2S ;
A1_UPS.ParamTempoComWarning := T#1S ; 
A1_UPS.ParamTimeOut 		:= T#2S  ; 			

A1_FSS.ParamCableCutSecurity 	:= FALSE ; 
A1_FSS.ParamTempoFire 			:= T#5S ; 
A1_FSS.ParamWatchdogEnable 		:= FALSE ; 

FOR KK:= 1 TO ParamNbPcs DO 
	AX_CB_ChainDcSwitchBank[KK].ParamAtleastOne 		:= TRUE ; 
	AX_CB_ChainDcSwitchBank[KK].ParamCableCutSecurity 	:= FALSE  ; 	
	AX_CB_ChainDcSwitchBank[KK].ParamNbSensors 			:= 1  ;

	AX_CB_ChainFanBank[KK].ParamAtleastOne 			:= TRUE ; 
	AX_CB_ChainFanBank[KK].ParamCableCutSecurity 	:= TRUE  ; 	
	AX_CB_ChainFanBank[KK].ParamNbSensors 			:= 1  ;

END_FOR 
			
A1_CB_RackCtrl24V.ParamAtleastOne	 		:= TRUE ; 
A1_CB_RackCtrl24V.ParamCableCutSecurity 	:= TRUE  ; 	
A1_CB_RackCtrl24V.ParamNbSensors 			:= 1  ;

A1_CB_PLC24V.ParamAtleastOne 				:= TRUE ; 
A1_CB_PLC24V.ParamCableCutSecurity 			:= TRUE  ; 	
A1_CB_PLC24V.ParamNbSensors 				:= 1  ;


]]></ST>
      </Implementation>
    </Method>
    <LineIds Name="FB_ESS">
      <LineId Id="2" Count="0" />
    </LineIds>
    <LineIds Name="FB_ESS.M_EquipmentCalls">
      <LineId Id="241" Count="0" />
      <LineId Id="338" Count="1" />
      <LineId Id="249" Count="0" />
      <LineId Id="251" Count="1" />
      <LineId Id="244" Count="0" />
      <LineId Id="264" Count="3" />
      <LineId Id="245" Count="0" />
      <LineId Id="387" Count="1" />
      <LineId Id="218" Count="1" />
      <LineId Id="238" Count="0" />
      <LineId Id="220" Count="0" />
      <LineId Id="237" Count="0" />
      <LineId Id="236" Count="0" />
      <LineId Id="225" Count="0" />
      <LineId Id="354" Count="0" />
      <LineId Id="235" Count="0" />
      <LineId Id="355" Count="0" />
      <LineId Id="226" Count="0" />
      <LineId Id="240" Count="0" />
      <LineId Id="227" Count="0" />
      <LineId Id="233" Count="1" />
      <LineId Id="228" Count="0" />
      <LineId Id="232" Count="0" />
      <LineId Id="230" Count="0" />
      <LineId Id="319" Count="1" />
      <LineId Id="322" Count="0" />
      <LineId Id="325" Count="0" />
      <LineId Id="323" Count="0" />
      <LineId Id="389" Count="1" />
      <LineId Id="281" Count="0" />
      <LineId Id="304" Count="0" />
      <LineId Id="409" Count="0" />
      <LineId Id="404" Count="2" />
      <LineId Id="410" Count="0" />
      <LineId Id="408" Count="0" />
      <LineId Id="403" Count="0" />
      <LineId Id="407" Count="0" />
    </LineIds>
    <LineIds Name="FB_ESS.M_Evaluate">
      <LineId Id="782" Count="0" />
    </LineIds>
    <LineIds Name="FB_ESS.M_Init">
      <LineId Id="213" Count="0" />
      <LineId Id="251" Count="0" />
      <LineId Id="459" Count="0" />
      <LineId Id="255" Count="4" />
      <LineId Id="253" Count="0" />
      <LineId Id="268" Count="1" />
      <LineId Id="215" Count="0" />
      <LineId Id="260" Count="0" />
      <LineId Id="216" Count="2" />
      <LineId Id="270" Count="1" />
      <LineId Id="273" Count="0" />
      <LineId Id="281" Count="0" />
      <LineId Id="431" Count="10" />
      <LineId Id="274" Count="0" />
      <LineId Id="494" Count="0" />
      <LineId Id="502" Count="1" />
      <LineId Id="219" Count="4" />
      <LineId Id="379" Count="0" />
      <LineId Id="381" Count="0" />
      <LineId Id="536" Count="0" />
      <LineId Id="540" Count="0" />
      <LineId Id="537" Count="1" />
      <LineId Id="386" Count="5" />
      <LineId Id="383" Count="0" />
      <LineId Id="377" Count="0" />
      <LineId Id="394" Count="0" />
      <LineId Id="396" Count="0" />
      <LineId Id="399" Count="0" />
      <LineId Id="411" Count="0" />
      <LineId Id="548" Count="0" />
      <LineId Id="528" Count="0" />
      <LineId Id="512" Count="0" />
      <LineId Id="420" Count="2" />
      <LineId Id="424" Count="1" />
      <LineId Id="378" Count="0" />
      <LineId Id="520" Count="0" />
      <LineId Id="511" Count="0" />
      <LineId Id="375" Count="1" />
      <LineId Id="224" Count="2" />
      <LineId Id="286" Count="3" />
      <LineId Id="291" Count="3" />
      <LineId Id="228" Count="1" />
      <LineId Id="282" Count="3" />
      <LineId Id="230" Count="3" />
      <LineId Id="426" Count="3" />
      <LineId Id="234" Count="1" />
      <LineId Id="295" Count="4" />
      <LineId Id="236" Count="1" />
      <LineId Id="301" Count="1" />
      <LineId Id="238" Count="0" />
      <LineId Id="304" Count="0" />
      <LineId Id="307" Count="0" />
      <LineId Id="240" Count="0" />
      <LineId Id="312" Count="1" />
      <LineId Id="311" Count="0" />
      <LineId Id="316" Count="1" />
      <LineId Id="241" Count="1" />
      <LineId Id="320" Count="0" />
      <LineId Id="318" Count="0" />
      <LineId Id="243" Count="3" />
      <LineId Id="321" Count="1" />
      <LineId Id="324" Count="0" />
      <LineId Id="327" Count="2" />
      <LineId Id="325" Count="0" />
      <LineId Id="333" Count="3" />
      <LineId Id="326" Count="0" />
      <LineId Id="323" Count="0" />
      <LineId Id="248" Count="0" />
      <LineId Id="360" Count="7" />
      <LineId Id="358" Count="0" />
      <LineId Id="350" Count="0" />
      <LineId Id="357" Count="0" />
      <LineId Id="249" Count="0" />
      <LineId Id="369" Count="0" />
      <LineId Id="368" Count="0" />
      <LineId Id="331" Count="1" />
      <LineId Id="330" Count="0" />
      <LineId Id="250" Count="0" />
      <LineId Id="347" Count="0" />
      <LineId Id="344" Count="2" />
      <LineId Id="338" Count="1" />
      <LineId Id="337" Count="0" />
      <LineId Id="205" Count="0" />
      <LineId Id="370" Count="3" />
      <LineId Id="166" Count="0" />
      <LineId Id="72" Count="0" />
      <LineId Id="449" Count="0" />
      <LineId Id="451" Count="0" />
      <LineId Id="469" Count="0" />
      <LineId Id="464" Count="1" />
      <LineId Id="477" Count="0" />
      <LineId Id="472" Count="1" />
      <LineId Id="478" Count="1" />
      <LineId Id="474" Count="0" />
      <LineId Id="471" Count="0" />
      <LineId Id="468" Count="0" />
      <LineId Id="483" Count="0" />
      <LineId Id="481" Count="1" />
      <LineId Id="480" Count="0" />
      <LineId Id="484" Count="2" />
      <LineId Id="470" Count="0" />
      <LineId Id="461" Count="1" />
      <LineId Id="460" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>